--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,5 +44,17 @@ services:
       retries: 5
     restart: unless-stopped
 
+  minio:
+    image: minio/minio:latest
+    container_name: socially-go-minio
+    command: server /data
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    volumes:
+      - socially_go_minio_data:/data
+    restart: unless-stopped
+
 volumes:
   socially_server_go_db_data:
+  socially_go_minio_data:
